crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@272.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('true', '$.floor()');"
---
SelectStmt@0..45
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..43
    FuncCall@7..43
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..30
        Sconst@24..30 "'true'"
      Ascii44@30..31 ","
      Whitespace@31..32 " "
      AConst@32..43
        Sconst@32..43 "'$.floor()'"
  Ascii41@43..44 ")"
  Ascii59@44..45 ";"

