crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@274.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('{}', '$.abs()', silent => true);"
---
SelectStmt@0..57
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..55
    FuncCall@7..55
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..28
        Sconst@24..28 "'{}'"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..39
        Sconst@30..39 "'$.abs()'"
      Ascii44@39..40 ","
      Whitespace@40..41 " "
      NamedArgExpr@41..55
        Ident@41..47 "silent"
        Whitespace@47..48 " "
        EqualsGreater@48..50 "=>"
        Whitespace@50..51 " "
        AConst@51..55
          TrueP@51..55 "true"
  Ascii41@55..56 ")"
  Ascii59@56..57 ";"

