crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@275.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('true', '$.floor()', silent => true);"
---
SelectStmt@0..61
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..59
    FuncCall@7..59
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..30
        Sconst@24..30 "'true'"
      Ascii44@30..31 ","
      Whitespace@31..32 " "
      AConst@32..43
        Sconst@32..43 "'$.floor()'"
      Ascii44@43..44 ","
      Whitespace@44..45 " "
      NamedArgExpr@45..59
        Ident@45..51 "silent"
        Whitespace@51..52 " "
        EqualsGreater@52..54 "=>"
        Whitespace@54..55 " "
        AConst@55..59
          TrueP@55..59 "true"
  Ascii41@59..60 ")"
  Ascii59@60..61 ";"

