crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@277.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[\"\", \"a\", \"abc\", \"abcabc\"]', '$[*] ? (@ starts with \"abc\")');"
---
SelectStmt@0..86
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..84
    FuncCall@7..84
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..52
        Sconst@24..52 "'[\"\", \"a\", \"abc\", \"ab ..."
      Ascii44@52..53 ","
      Whitespace@53..54 " "
      AConst@54..84
        Sconst@54..84 "'$[*] ? (@ starts wit ..."
  Ascii41@84..85 ")"
  Ascii59@85..86 ";"

