crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@279.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[\"\", \"a\", \"abd\", \"abdabc\"]', 'strict $ ? (@[*] starts with \"abc\")');"
---
SelectStmt@0..93
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..91
    FuncCall@7..91
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..52
        Sconst@24..52 "'[\"\", \"a\", \"abd\", \"ab ..."
      Ascii44@52..53 ","
      Whitespace@53..54 " "
      AConst@54..91
        Sconst@54..91 "'strict $ ? (@[*] sta ..."
  Ascii41@91..92 ")"
  Ascii59@92..93 ";"

